--- a/work with teacher/html/index.html
+++ b/work with teacher/html/index.html
@@ -5,10 +5,14 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
-	<script defer src="/work with teacher/js/city.js"></script>
+	<link rel="stylesheet" href="/work with teacher/css/style.css">
+	<script src="/work with teacher/js/city.js"></script>
 	<script defer src="/work with teacher/js/my-code.js"></script>
 </head>
 <body>
-	
+	<div class="container">
+		<h1 class="main-title">Игра в города</h1>
+		<button class="start-button">Начинаем?</button>
+	</div>
 </body>
 </html>
