--- a/work with teacher/html/index.html
+++ b/work with teacher/html/index.html
@@ -7,13 +7,14 @@
 	<title>Document</title>
 	<link rel="stylesheet" href="/work with teacher/css/style.css">
 	<script src="/work with teacher/js/city.js"></script>
-	<script  src="/work with teacher/js/my-code.js"></script>
+	<script  defer src="/work with teacher/js/my-code.js"></script>
 </head>
 <body>
 	<div class="container">
 		<h1 class="main-title">Игра в города</h1>
 		<button class="button">Погнали?</button>
-		<h3 class="answers"></h3>
+		<input type="text" class="input">
+		<button class="button-input">Ввод</button>
 	</div>
 </body>
 </html>
