--- a/work with teacher/html/index.html
+++ b/work with teacher/html/index.html
@@ -10,11 +10,10 @@
 	<script  defer src="/work with teacher/js/my-code.js"></script>
 </head>
 <body>
-	<div class="container">
+	<div class="container flex">
 		<h1 class="main-title">Игра в города</h1>
 		<button class="button">Погнали?</button>
-		<input type="text" class="input">
-		<button class="button-input">Ввод</button>
+	 <h3 class="answer"></h3>
 	</div>
 </body>
 </html>
