new code for city homework

--- a/work with teacher/html/index.html
+++ b/work with teacher/html/index.html
@@ -10,10 +10,6 @@
 	<script  defer src="/work with teacher/js/my-code.js"></script>
 </head>
 <body>
-	<div class="container flex">
-		<h1 class="main-title">Игра в города</h1>
-		<button class="button">Погнали?</button>
-	 <h3 class="answer"></h3>
-	</div>
+	<div class="container"></div>
 </body>
 </html>
