--- a/City-Game/City game/html/index.html
+++ b/City-Game/City game/html/index.html
@@ -5,9 +5,9 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
-	<link rel="stylesheet" href="/work with teacher/css/style.css">
-	<script src="/work with teacher/js/city.js"></script>
-	<script  defer src="/work with teacher/js/my-code.js"></script>
+	<link rel="stylesheet" href="/work with teacher/City game/css/style.css">
+	<script src="/work with teacher/City game/js/city.js"></script>
+	<script  defer src="/work with teacher/City game/js/my-code.js"></script>
 </head>
 <body>
 	<div class="container"></div>
