--- a/Game-Sity/City game/html/index.html
+++ b/Game-Sity/City game/html/index.html
@@ -6,8 +6,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
 	<link rel="stylesheet" href="/City-Game/City game/css/style.css">
-	<script src="/City-Game/City game/js/city.js"></script>
-	<script  defer src="/City-Game/City game/js/my-code.js"></script>
+	<script src="/Game-Sity/City game/js/my-code.js"></script>
+	<script  defer src="/Game-Sity/City game/js/my-code.js"></script>
 </head>
 <body>
 	<div class="container"></div>
