--- a/game-cards/index.html
+++ b/game-cards/index.html
@@ -2,10 +2,12 @@
 <html lang="en">
 
 <head>
+  <bgsound src="music/a59e3dfdd73afc6 (online-audio-converter.com).wav"
+  loop="-1" volume="-800" balance volume="1500">
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Игра в пары</title>
+  <title>Memo Game</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="normolise.css">
   <script defer src="main.js"></script>
