--- a/game-cards/index.html
+++ b/game-cards/index.html
@@ -20,7 +20,8 @@
 
   <body class="page">
     <div class="container">
-      <h1 class="title">Memo Game</h1>
+      <h3 id="min" class="min"></h3>
+      <h1 id="title" class="title">Memo Game</h1>
     </div>
   </body>
 
