--- a/students-list/index.html
+++ b/students-list/index.html
@@ -5,11 +5,16 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
-	<link rel="stylesheet" href="style.css">
-	<script defer src="/code.js"></script>
+	<link rel="stylesheet" href="/css/style.css">
+	<script defer src="/js/code.js"></script>
 </head>
-<body>
+<body class="page">
 	<div class="container">
+		<table class="table">
+			<thead class="table-head">
+				td.table-head__
+			</thead>
+		</table>
 	</div>
 </body>
 </html>
