--- a/student-table/index.html
+++ b/student-table/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
 	<link rel="stylesheet" href="/css/style.css">
-	<script src="/js/code.js"></script>
+	<script defer src="/js/code.js"></script>
 </head>
 <body>
 	<div class="container">
