--- a/student-table/index.html
+++ b/student-table/index.html
@@ -13,12 +13,24 @@
 		<script src="/js/create.js"></script>
 		<table class="table" cellspacing="0" cellpadding="10">
 			<thead class="table-head">
-				<td class="table-head__elem"><button class="button-name table-button">Имя</button></td>
-				<td class="table-head__elem"><button class="button-surname table-button">Фамилия</button></td>
-				<td class="table-head__elem"><button class="button-patronymic table-button">Отчество</button></td>
-				<td class="table-header__elem"><button class="button-bthday table-button">д.Рождения</button></td>
-				<td class="table-header__elem"><button class="button-start-day table-button">Hачала обучения</button></td>
-				<td class="table-header__elem"><button class="button-faculty table-button">Факультет</button></td>
+				<td class="table-header__elem">
+					<button class="button-name table-button" id="button-name">Имя</button>
+				</td>
+				<td class="table-header__elem">
+					<button class="button-surname table-button" id="button-surname">Фамилия</button>
+				</td>
+				<td class="table-header__elem">
+					<button class="button-patronymic table-button" id="button-patronymic">Отчество</button>
+				</td>
+				<td class="table-header__elem">
+					<button class="button-bthday table-button" id="button-bthday">д.Рождения</button>
+				</td>
+				<td class="table-header__elem">
+					<button class="button-start-day table-button" id="button-start-day">Hачала обучения</button>
+				</td>
+				<td class="table-header__elem">
+					<button class="button-faculty table-button" id="button-faculty">Факультет</button>
+				</td>
 			</thead>
 			<tbody class="table-body">
 
