--- a/student-table/index.html
+++ b/student-table/index.html
@@ -26,16 +26,15 @@
 					<button class="button-bthday table-button" id="button-bthday" data-path="birthday">д.Рождения</button>
 				</td>
 				<td class="table-header__elem">
-					<button class="button-start-day table-button" id="button-start-day" data-path="start">Hачала обучения</button>
+					<button class="button-start-day table-button" id="button-start-day" data-path="start">Hачалo обучения</button>
 				</td>
 				<td class="table-header__elem">
 					<button class="button-faculty table-button" id="button-faculty" data-path="faculty">Факультет</button>
 				</td>
 			</thead>
-			<tbody class="table-body">
-
-			</tbody>
+			<tbody class="table-body"></tbody>
 		</table>
 	</div>
+
 </body>
 </html>
