--- a/theory/try-catch/index.html
+++ b/theory/try-catch/index.html
@@ -9,7 +9,11 @@
 </head>
 <body>
 	<div class="container">
-		<ul class="list"></ul>
+		<div class="elem" data-price="1000" data-amount="6">5</div>
+		<div class="elem" data-price="1340" data-amount="5">5</div>
+		<div class="elem" data-price="1110" data-amount="2">5</div>
+		<div class="elem" data-price="" data-amount="12">5</div>
+		<div class="elem" data-price="1020" data-amount="3">5</div>
 	</div>
 </body>
 </html>
