--- a/my-work/student-table/index.html
+++ b/my-work/student-table/index.html
@@ -7,6 +7,7 @@
 	<title>Document</title>
 	<link rel="stylesheet" href="/css/style.css">
 	<script defer src="/js/code.js"></script>
+  <script defer src="/js/filter.js"></script>
 </head>
 <body>
 	<div class="container">
