--- a/draft/index.html
+++ b/draft/index.html
@@ -6,10 +6,12 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
 	<link rel="stylesheet" href="style.css">
-	<script defer src="/code.js"></script>
+	<script src="/js/arr.js"></script>
+	<script defer src="/js/code.js"></script>
 </head>
 <body>
 	<div class="container">
+		<button class="button">push</button>
 	</div>
 </body>
 </html>
