--- a/my-work/student-table/index.html
+++ b/my-work/student-table/index.html
@@ -5,9 +5,9 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
-	<link rel="stylesheet" href="/css/style.css">
-	<script defer src="/js/code.js"></script>
-  <script defer src="/js/filter.js"></script>
+	<link rel="stylesheet" href="/todo/css/style.css">
+	<script defer src="/"></script>
+  <script defer src="/"></script>
 </head>
 <body>
 	<div class="container">
