--- a/draft/index.html
+++ b/draft/index.html
@@ -5,9 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
-	<link rel="stylesheet" href="style.css">
-	<script src="/js/arr.js"></script>
-	<script defer src="/js/code.js"></script>
+	<script defer src="/draft/js/code.js"></script>
 </head>
 <body>
 	<div class="container">
