--- a/theory/promise/index.html
+++ b/theory/promise/index.html
@@ -5,9 +5,9 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>promise</title>
-	<script defer src="/promise/js/code.js"></script>
+	<script defer src="/theory/promise/js/code.js"></script>
 </head>
 <body>
-	
+	<div class="container"></div>
 </body>
 </html>
