save changes on student table on server

--- a/draft/index.html
+++ b/draft/index.html
@@ -5,10 +5,15 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
-	<script defer src="/draft/js/code.js"></script>
+	<script defer src="/js/code.js"></script>
+	<link rel="stylesheet" href="/style.css">
 </head>
 <body>
 	<div class="container">
+		<p class="text">text</p>
+		<p class="text">text</p>
+		<h1 class="title">title</h1>
+		<span class="span" id="span">span</span>
 		<button class="button">push</button>
 	</div>
 </body>
