--- a/theory/promise/index.html
+++ b/theory/promise/index.html
@@ -5,9 +5,10 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>promise</title>
-	<script defer src="/theory/promise/js/code.js"></script>
+	<link rel="stylesheet" href="/promise/css/style.css">
+	<script defer src="/promise/js/code.js"></script>
 </head>
 <body>
-	<div class="container"></div>
+	<div class="container"><div class="main-block"></div></div>
 </body>
 </html>
