--- a/theory/call-apply-bind/index.html
+++ b/theory/call-apply-bind/index.html
@@ -5,10 +5,12 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
-	<script defer src="/js/code.js"></script>
-	<link defer rel="stylesheet" href="/style.css">
+	<script defer src="/call-apply-bind/index.js"></script>
 </head>
 <body>
-	<div class="container"></div>
+	<div class="container">
+		<h1 id="name">My name is Nike</h1>
+		<h2 class="title">Hello world</h2>
+	</div>
 </body>
 </html>
