--- a/my-work/todo/frontent/dad.html
+++ b/my-work/todo/frontent/dad.html
@@ -6,16 +6,37 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<title>Document</title>
 	
-	<link rel="stylesheet" href="/css/style.css">
+	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" 
 		href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" 
 		integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" 
 		crossorigin="anonymous">
-	<script defer src="js/code.js"></script>
-	<script>
-		document.addEventListener("DOMContentLoaded", () => {
-			createTodoApp(document.getElementById('container-id'), 'Мои дела', 'my-todo')
-		});
+	<script type="module" >
+		const owner = 'dad-todo';
+		const title = 'Dad';
+		const $container = document.querySelector('.container');
+
+		import { createTodoApp } from "/todo-app/view.js";
+
+		import { 
+			getTodoList,
+			changeObj,
+			deletePost,
+			postObjOnServer,
+		} from "/todo-app/api.js";
+
+		(async () => {
+
+			createTodoApp($container, {
+				title,
+				owner,
+				myTodoList : getTodoList,
+				buttonChangePost : changeObj,
+				buttonDeletePost: deletePost,
+				buttonPostOnServer: postObjOnServer,  
+			});
+		})();
+	
 	</script>
 </head>
 <body class = page>
