--- a/my-work/todo/frontent/index.html
+++ b/my-work/todo/frontent/index.html
@@ -11,16 +11,38 @@
 		href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" 
 		integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" 
 		crossorigin="anonymous">
-	<script defer src="js/code.js"></script>
-	<script>
-		document.addEventListener("DOMContentLoaded", () => {
-			createTodoApp(document.getElementById('container-id'), 'Дела папы', 'dad-todo')
-		});
+	<script type="module" >
+		const owner = 'my-todo';
+		const title = 'My Todo';
+		const $container = document.querySelector('.container');
+
+		import { createTodoApp } from "/todo-app/view.js";
+
+		import { 
+			getTodoList,
+			changeObj,
+			deletePost,
+			postObjOnServer,
+		} from "/todo-app/api.js";
+
+		(async () => {
+
+			createTodoApp($container, {
+				title,
+				owner,
+				myTodoList : getTodoList,
+				buttonChangePost : changeObj,
+				buttonDeletePost: deletePost,
+				buttonPostOnServer: postObjOnServer,  
+			});
+		})();
+	
 	</script>
 </head>
-<body class = page>
 
-	<div id="container-id" class="container">	
+<body class = page>
+	<button></button>
+	<div id="container-id" class="container">
 		<nav class="nav">
 			<a href="index.html" class="link">Мои дела</a>
 			<a href="mom.html" class="link">Дела мамы</a>
