--- a/theory/import-export/index.html
+++ b/theory/import-export/index.html
@@ -4,11 +4,11 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
-	<script defer src="/js/code.js"></script>
-	<link defer rel="stylesheet" href="/style.css">
+	<title>Import - Export</title>
+
 </head>
 <body>
 	<div class="container"></div>
+	<script type="module" src="/import-export/app.js"></script>
 </body>
 </html>
