--- a/theory/regular/index.html
+++ b/theory/regular/index.html
@@ -4,9 +4,8 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
-	<script defer src="/js/code.js"></script>
-	<link defer rel="stylesheet" href="/style.css">
+	<title>Regular</title>
+	<script defer src="/theory/regular/js/index.js"></script>
 </head>
 <body>
 	<div class="container"></div>
