--- a/my-work/student-table-on-server/frontend/index.html
+++ b/my-work/student-table-on-server/frontend/index.html
@@ -5,12 +5,12 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
-	<link rel="stylesheet" href="/frontend/css/style.css">
-	<script defer src="/frontend/js/index.js"></script>
+	<link rel="stylesheet" href="/css/style.css">
+	<script defer src="/js/index.js"></script>
 </head>
 <body>
 	<div class="container">
-		<script src="/frontend/js/create.js"></script>
+		<script src="/js/create.js"></script>
 		<table class="table"  cellspacing="0" cellpadding="20">
 			<thead class="table-head">
 				<td class="table-header__elem">
