--- a/draft/index.html
+++ b/draft/index.html
@@ -5,10 +5,20 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
-	<script defer src="/js/code.js"></script>
 	<link defer rel="stylesheet" href="/style.css">
+	<script defer src="/js/code.js"></script>
 </head>
 <body>
-	<div class="container"></div>
+	<div class="container ">
+		<form class="form">
+			<input type="number" class="input-one" >
+
+			<input type="text" class="operand">
+			<input type="number" class="input-two" >
+			  =
+			<p class="text"></p>
+		</form>
+		<button class="button">summ</button>
+	</div>
 </body>
 </html>
