--- a/draft/index.html
+++ b/draft/index.html
@@ -1,24 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
-	<link defer rel="stylesheet" href="/style.css">
-	<script defer src="/js/code.js"></script>
-</head>
-<body>
-	<div class="container ">
-		<form class="form">
-			<input type="number" class="input-one" >
-
-			<input type="text" class="operand">
-			<input type="number" class="input-two" >
-			  =
-			<p class="text"></p>
-		</form>
-		<button class="button">summ</button>
-	</div>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link defer rel="stylesheet" href="/style.css" />
+    <script defer src="js/code.js"></script>
+  </head>
+  <body>
+    <div class="container">
+			<button class="button">pusdfdfdfdfdfh</button>
+			<input type="text" class="input">
+		</div>
+  </body>
 </html>
